csrc/tests/codegen_probes/errors/err_const_vector_ragged.bas
' REJECT: 2-D array initialiser rows of unequal length.
' zxbparser p_const_vector_vector_list:932 "All rows must have the same number of elements".
Dim a(1, 2) As Byte => {{1, 2, 3}, {4, 5}}
